<resources>
    <string name="app_name">Tripney</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_tripney">Tripney</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="profile_about">About Me</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_email">Email</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_first_name">FirstName</string>

    <string name="gcm_sender_id">id:531408757318</string>
    <string name="notif_action_text">Take a look.</string>

    <string name="adapter_date_string_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="facebook_app_id">209657622867468</string>
    <string name="google_maps_api_key">AIzaSyAE1Bq6joAc6Msp27pakdXxJEB5KVs_HL4</string>
    <string name="btn_cancel">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_done">Done</string>

    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_about">About</string>
    <string name="open_drawer">Open nav drawer</string>
    <string name="close_drawer">Close nav drawer</string>
    <string name="drawer_menu_timeline">Timeline</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_filter">Filter</string>
    <string name="drawer_menu_signout">Sign Out</string>
    <string name="drawer_menu_signin">Sign In</string>
    <string name="guest_name">Guest _User</string>
    <string name="search">Search</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Log in</string>
    <string name="login_facebook">Log in with Facebook</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_sign_up"><u>Create one now.</u></string>
    <string name="login_guest">Continue as guest</string>

    <string name="signup_email">Email</string>
    <string name="signup_firstname">First Name</string>
    <string name="signup_lastname">Last Name</string>
    <string name="signup_signup">Sign Up</string>


    <string name="profile_save">Save</string>
    <string name="profile_cancel">Cancel</string>
    <string name="menu_share">Share</string>
    <string name="welcome">Welcome to Tripney</string>
    <string name="login_agreement">By continuing, I agree to Tripney\'s Terms of service and Privacy Policy</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="address1">Address 1</string>
    <string name="city">City</string>
    <string name="address2">Address2</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="event_detail">Event Detail</string>
    <string name="trip">Detail</string>
    <string name="events">Events</string>
    <string name="wishlist">Wish List</string>
    <string name="expenese">Expenses</string>
    <string name="title_activity_detail_event">DetailEventActivity</string>
    <string name="trip_name">Name</string>
    <string name="trip_date">Date</string>
    <string name="trip_desc">Description</string>
    <string name="trip_location">Location</string>
    <string name="trip_add_friends">Add Friends</string>
    <string name="title_activity_add_new_friends">AddNewFriendsActivity</string>
    <string name="event_date">Date</string>
    <string name="event_name">Name</string>
    <string name="event_location">Location</string>
    <string name="event_duration">Duration</string>
    <string name="event_type">Type</string>
    <string name="event_price">Price</string>
    <string name="timezone_prompt">TimeZone</string>
    <string name="paidBy">Paid By</string>
    <string name="equal">=</string>
    <string name="amount">1.15</string>
    <string name="percentage">%</string>
    <string name="event_add_friends">Add Friends</string>
    <string name="friends">Friends</string>

</resources>

