<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPaidBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paidBy"/>

        <LinearLayout
            android:id="@+id/llSplitBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPaidBy">

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equal"/>

            <Button
                android:id="@+id/btnAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"/>


            <Button
                android:id="@+id/btnPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentage"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/flContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llSplitBy"/>


    </RelativeLayout>

</layout>
