<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fomono_blur_bkground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    tools:context="com.msaranu.tripney.activities.SigninActivity">

    <TextView
        android:id="@+id/tvSignInWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily=""
        android:text="@string/app_name"
        android:textColor="@color/colorTripney"
        android:textSize="50sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:id="@+id/relwrapId"
        android:layout_marginTop="140dp"
        android:background="@drawable/relative_layout_border"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etUserId"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_edt_text_margin_top"
            android:hint="@string/login_username"
            android:inputType="text"
            android:textAlignment="center" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/event_list_divider_param"
            android:id="@+id/EventLineId"
            android:layout_below="@id/etUserId"
            android:background="@color/colorGrey"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EventLineId"
            android:textAlignment="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="@dimen/sign_up_edt_text_margin_top"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

    </RelativeLayout>
    <Button
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_menu_signin"
        android:background="@color/colorTripney"
        android:textColor="@color/colorWhite"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_below="@+id/relwrapId"
        android:layout_alignStart="@id/relwrapId"
        android:layout_alignEnd="@id/relwrapId"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
