<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout android:orientation="vertical"
        android:id="@+id/activity_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fomono_blur_bkground"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        tools:context="com.msaranu.tripney.activities.SignupActivity">


        <TextView
            android:id="@+id/tvSignUpWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily=""
            android:text="@string/app_name"
            android:textColor="@color/colorTripney"
            android:textSize="50sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/relative_layout_border"
            android:layout_below="@id/tvSignUpWelcome"
            android:id="@+id/activity_signup_internal_layout"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="textPersonName"
                android:hint="@string/signup_firstname"
                android:background="@android:color/transparent"
                android:id="@+id/etFirstName"
                android:layout_marginTop="@dimen/sign_up_edt_text_margin_top"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/event_list_divider_param"
                android:id="@+id/EventLine1Id"
                android:layout_below="@id/etFirstName"
                android:background="@color/colorGrey"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="textPersonName"
                android:id="@+id/etLastName"
                android:background="@android:color/transparent"
                android:hint="@string/signup_lastname"
                android:layout_marginTop="@dimen/sign_up_edt_text_margin_top"
                android:layout_below="@+id/EventLine1Id"
                android:layout_centerHorizontal="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/event_list_divider_param"
                android:id="@+id/EventLine2Id"
                android:layout_below="@id/etLastName"
                android:background="@color/colorGrey"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="textEmailAddress"
                android:id="@+id/etEmail"
                android:background="@android:color/transparent"
                android:hint="@string/signup_email"
                android:layout_marginTop="@dimen/sign_up_edt_text_margin_top"
                android:layout_below="@+id/EventLine2Id"
                android:layout_centerHorizontal="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/event_list_divider_param"
                android:id="@+id/EventLine3Id"
                android:layout_below="@+id/etEmail"
                android:background="@color/colorGrey"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="text"
                android:id="@+id/etUserId"
                android:hint="@string/login_username"
                android:layout_below="@+id/EventLine3Id"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/sign_up_edt_text_margin_top" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/event_list_divider_param"
                android:id="@+id/EventLine4Id"
                android:layout_below="@+id/etUserId"
                android:background="@color/colorGrey"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:id="@+id/etPassword"
                android:layout_below="@+id/EventLine4Id"
                android:hint="@string/login_password"
                android:layout_marginTop="@dimen/sign_up_edt_text_margin_top"
                android:layout_centerHorizontal="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/event_list_divider_param"
                android:id="@+id/EventLine5Id"
                android:layout_below="@id/etUserId"
                android:background="@color/colorGrey"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_signup"
            android:background="@color/colorTripney"
            android:textColor="@color/colorWhite"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_below="@+id/activity_signup_internal_layout"
            android:layout_alignStart="@+id/activity_signup_internal_layout"
            android:layout_alignEnd="@+id/activity_signup_internal_layout"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>