<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.msaranu.tripney.models.User" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivUserImage"
            android:layout_centerHorizontal="true"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:riv_border_color="@color/colorWhite"
            app:riv_border_width="2dp"
            app:riv_corner_radius="100dp"
            app:riv_mutate_background="true"
            android:src="@drawable/default_user_image">

        </com.makeramen.roundedimageview.RoundedImageView>


        <ImageView
            android:id="@+id/ivCameraImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/ivUserImage"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_photo_camera" />

        <TextView
            android:id="@+id/tvFirstNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivUserImage"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/profile_first_name"
            android:textColor="@color/hintColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFirstNameLabel"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:lines="1"
            android:focusableInTouchMode="true"
            android:text='@{user.firstName}'
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLastNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etFirstName"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/profile_last_name"
            android:textColor="@color/hintColor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLastNameLabel"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:text='@{user.lastName}'
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etLastName"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/profile_email"
            android:textColor="@color/hintColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEmail"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text='@{user.email}'
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etEmail"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:textColor="@color/hintColor"
            android:text="@string/profile_phone" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPhone"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:text='@{user.phone}'
            android:focusable="true"
            android:lines="1"
            android:focusableInTouchMode="true"
            android:maxLength="20"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvAddress1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPhone"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/address1"
            android:textColor="@color/hintColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etAddress1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAddress1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top|left"
            android:text='@{user.address1}'
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tvAddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etAddress1"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/address2"
            android:textColor="@color/hintColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAddress2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top|left"
            android:text='@{user.address2}'
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etAddress2"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/city"
            android:textColor="@color/hintColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCity"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top|left"
            android:text='@{user.city}'
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etCity"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/state"
            android:textColor="@color/hintColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvState"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top|left"
            android:text='@{user.state}'
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tvZip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etState"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/zip"
            android:textColor="@color/hintColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvZip"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top|left"
            android:text='@{user.zip}'
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/llButtons"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingTop="2dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/etAboutMe">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorGrey"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/profile_cancel"
                android:layout_weight="50"/>

            <View
                android:id="@+id/vDivider"
                android:layout_width="2dp"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorTripney"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_weight="50"
                android:text="@string/profile_save"/>

        </LinearLayout>

    </RelativeLayout>
</layout>
